--- a/Exercicios_EDA.ipynb
+++ b/Exercicios_EDA.ipynb
@@ -96,17 +96,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 221
         },
         "id": "2IwP4pLQ_ucy",
-        "outputId": "45b3d48d-efba-417b-989b-e40040359a43"
+        "outputId": "d47fe518-edf3-457d-bc72-d17b4a8ffd36"
       },
       "source": [
         "import pandas as pd\n",
         "\n",
         "# Carregando os dados\n",
         "# O arquivo “titanic.csv” deve estar salvo na mesma pasta do seu código Python\n",
-        "dados = pd.read_csv(\"titanic.csv\", sep=';')\n",
+        "dados = pd.read_csv(\"titanic.csv\")\n",
         "\n",
         "# Exibe o número de linhas e colunas\n",
         "print(dados.shape)\n",
@@ -171,7 +171,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>A/5 21171</td>\n",
-              "      <td>7.25</td>\n",
+              "      <td>7.2500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "    </tr>\n",
@@ -186,7 +186,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>PC 17599</td>\n",
-              "      <td>712.833</td>\n",
+              "      <td>71.2833</td>\n",
               "      <td>C85</td>\n",
               "      <td>C</td>\n",
               "    </tr>\n",
@@ -201,7 +201,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>STON/O2. 3101282</td>\n",
-              "      <td>7.925</td>\n",
+              "      <td>7.9250</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "    </tr>\n",
@@ -216,7 +216,7 @@
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>113803</td>\n",
-              "      <td>53.1</td>\n",
+              "      <td>53.1000</td>\n",
               "      <td>C123</td>\n",
               "      <td>S</td>\n",
               "    </tr>\n",
@@ -231,7 +231,7 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>373450</td>\n",
-              "      <td>8.05</td>\n",
+              "      <td>8.0500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
               "    </tr>\n",
@@ -241,11 +241,11 @@
             ],
             "text/plain": [
               "   PassengerId  Survived  Pclass  ...     Fare Cabin  Embarked\n",
-              "0            1         0       3  ...     7.25   NaN         S\n",
-              "1            2         1       1  ...  712.833   C85         C\n",
-              "2            3         1       3  ...    7.925   NaN         S\n",
-              "3            4         1       1  ...     53.1  C123         S\n",
-              "4            5         0       3  ...     8.05   NaN         S\n",
+              "0            1         0       3  ...   7.2500   NaN         S\n",
+              "1            2         1       1  ...  71.2833   C85         C\n",
+              "2            3         1       3  ...   7.9250   NaN         S\n",
+              "3            4         1       1  ...  53.1000  C123         S\n",
+              "4            5         0       3  ...   8.0500   NaN         S\n",
               "\n",
               "[5 rows x 12 columns]"
             ]
@@ -264,12 +264,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lQFff0aENYin",
-        "outputId": "f3c6ec70-7ab4-4af4-971a-b950a6fcd05a"
+        "outputId": "f44729d6-64d4-4256-d2ed-3520ac383ed2"
       },
       "source": [
         "dados.dtypes"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +293,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 2
         }
       ]
     },
@@ -315,13 +315,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rQ22E-j6_ucz",
-        "outputId": "9ec16f4e-5843-43d9-b127-00b8b2b64ab1"
+        "outputId": "6fb937e4-fb3d-48a7-b66f-a3c9ac297899"
       },
       "source": [
         "# Seu código\n",
         "dados['Survived'].value_counts(normalize=True)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,36 +335,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zcBKEvAX_uc0",
-        "outputId": "6620e31c-f074-4123-a98b-5cab44c42ae9"
+        "id": "zcBKEvAX_uc0"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0    0.616162\n",
-              "1    0.383838\n",
-              "Name: Survived, dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -382,13 +366,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9R89ADjE_uc0",
-        "outputId": "cd3f631b-f42a-4220-a325-0c250aa38f63"
+        "outputId": "b0a753be-e763-4846-deee-8e95fb2bea6b"
       },
       "source": [
         "# Seu código\n",
         "print ('De ' + str(dados['Age'].min()) + ' a ' + str(dados['Age'].max())) "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,15 +419,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I-ymEDHW_uc1",
-        "outputId": "d77da36c-d7c3-4f35-c300-f6bca8112525"
+        "outputId": "2fbc2d0e-d61c-44c8-aa70-55f6991892a4"
       },
       "source": [
         "# Seu código\n",
-        "#dados.groupby(['Sex']).Survived.mean()\n",
         "print('Mulheres: ' + str(dados.query('Sex == \"female\"').Survived.mean()))\n",
         "print('Homens: ' + str(dados.query('Sex == \"male\"').Survived.mean()))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,8 +480,7 @@
         "outputId": "770b8e5d-c33a-4e1d-a7b3-e7d9e3268d43"
       },
       "source": [
-        "# Seu código\n",
-        "dados['Survived'].dtype"
+        "# Seu código\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -543,13 +525,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "92722ffd-1a11-4385-fb8b-ae52f0747f45"
+        "outputId": "07a05597-00b4-42af-d09a-221463d01bfa"
       },
       "source": [
         "# Seu código\n",
         "dados['Pclass'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +546,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 6
         }
       ]
     },
@@ -623,15 +605,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec7a1df3-e9d9-4065-f625-da6ffb877c22"
+        "outputId": "3538dea0-f694-4a11-b6e6-51b5c34a39f8"
       },
       "source": [
         "# Seu código\n",
-        "dados['Fare'] = dados['Fare'].str.replace('.','')\n",
-        "dados['Fare'] = pd.to_numeric(dados['Fare'])\n",
-        "dados['Fare']"
+        "#dados['Fare'] = dados['Fare'].str.replace('.','')\n",
+        "#dados['Fare'] = pd.to_numeric(dados['Fare'])\n",
+        "#dados['Fare']"
       ],
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 8
         }
       ]
     },
@@ -665,19 +647,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sf02QZ-TmfcC",
-        "outputId": "e1d4d848-402f-4e6a-cead-4d4cb98be51b"
+        "outputId": "a1ed06d9-2f75-4720-e201-f189635b9f03"
       },
       "source": [
         "print ('Média: ' + str(dados['Fare'].mean()))\n",
         "print ('Desvio padrão: ' + str(dados['Fare'].std()))"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Média: 127660.65544332212\n",
-            "Desvio padrão: 411122.9926114173\n"
+            "Média: 32.2042079685746\n",
+            "Desvio padrão: 49.693428597180905\n"
           ],
           "name": "stdout"
         }
@@ -740,7 +722,7 @@
         "import seaborn as sns\n",
         "sns.boxplot(data=dados['Age'],)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,11 +802,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "QfP6_PIM_uc4",
-        "outputId": "56dd2ddd-8978-459b-cf6d-21f80beccd28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        }
+        },
+        "outputId": "56dd2ddd-8978-459b-cf6d-21f80beccd28"
       },
       "source": [
         "# Seu código\n",
@@ -833,7 +815,7 @@
         "ax3 = sns.histplot(data=dados['Pclass'])\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
